--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
 POSTGRES_PASSWORD=password
-POSTGRES_USER=cardando
-POSTGRES_DB=cardando
+POSTGRES_USER=revosearch
+POSTGRES_DB=revosearch
 POSTGRES_HOST=127.0.0.1
 POSTGRES_PORT=5432
 
 JWT_SECRET=N07_S0_S3CR37
 
-SMTP_FROM=test@cardando.com
+SMTP_FROM=test@revosearch.com
 SMTP_USER=test
 SMTP_PASSWORD=test
 SMTP_HOST=sandbox.smtp.mailtrap.io
