--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ POSTGRES_USER=revosearch
 POSTGRES_DB=revosearch
 POSTGRES_HOST=127.0.0.1
 POSTGRES_PORT=5432
+LOG_SQL=info
 
 JWT_SECRET=N07_S0_S3CR37
 
@@ -12,4 +13,4 @@ SMTP_PASSWORD=test
 SMTP_HOST=sandbox.smtp.mailtrap.io
 SMTP_PORT=465
 
-BASE_URL=https://localhost:4000
+BASE_URL=https://localhost:5173
