update package name

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
 POSTGRES_PASSWORD=password
-POSTGRES_USER=revosearch
-POSTGRES_DB=revosearch
+POSTGRES_USER=dnd
+POSTGRES_DB=dnd
 POSTGRES_HOST=127.0.0.1
 POSTGRES_PORT=5432
 LOG_SQL=info
 
 JWT_SECRET=N07_S0_S3CR37
 
-SMTP_FROM=test@revosearch.com
+SMTP_FROM=test@dnd.com
 SMTP_USER=test
 SMTP_PASSWORD=test
 SMTP_HOST=sandbox.smtp.mailtrap.io
