--- a/.air.toml
+++ b/.air.toml
@@ -2,8 +2,8 @@
 root = "."
 tmp_dir = "tmp"
 [build]
-  cmd = "go build -o ./tmp/revosearch ."
-  bin = "./tmp/revosearch"
+  cmd = "go build -o ./tmp/dnd ."
+  bin = "./tmp/dnd"
   delay = 1000 # ms
   exclude_dir = ["static", "tmp", "vendor"]
   include_ext = ["go", "tpl", "tmpl", "html", "pug", "css", "js", "env"]
