--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,13 +1,30 @@
-version: '3.9'
+version: "3.9"
 services:
-  webapp:
-    build: "../webapp"
-    depends_on:
-      - backend
+  #  webapp:
+  #    build: "../webapp"
+  #    depends_on:
+  #      - backend
   backend:
     build: .
+    environment:
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_HOST: ${POSTGRES_HOST}
+      POSTGRES_PORT: ${POSTGRES_PORT}
+      LOG_SQL: ${LOG_SQL}
+      JWT_SECRET: ${JWT_SECRET}
+      SMTP_FROM: ${SMTP_FROM}
+      SMTP_USER: ${SMTP_USER}
+      SMTP_PASSWORD: ${SMTP_PASSWORD}
+      SMTP_HOST: ${SMTP_HOST}
+      SMTP_PORT: ${SMTP_PORT}
+      BASE_URL: ${BASE_URL}
+      ALLOWED_ORIGINS: ${ALLOWED_ORIGINS}
+      PORT: ${PORT}
+      enviroment: production
     depends_on:
-      - redis
+      #- redis
       - pg
   pg:
     image: postgres:alpine
