--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ SMTP_USER=test
 SMTP_PASSWORD=test
 SMTP_HOST=sandbox.smtp.mailtrap.io
 SMTP_PORT=465
+SMTP_USE_SSL=false
 
 BASE_URL=https://localhost:5173
 ALLOWED_ORIGINS=, https://dnd.gonagutor.com
