--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,6 +6,8 @@ services:
   #      - backend
   backend:
     build: .
+    ports:
+      - ${PORT}:${PORT}
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_USER: ${POSTGRES_USER}
@@ -19,6 +21,7 @@ services:
       SMTP_PASSWORD: ${SMTP_PASSWORD}
       SMTP_HOST: ${SMTP_HOST}
       SMTP_PORT: ${SMTP_PORT}
+      SMTP_USE_SSL: ${SMTP_USE_SSL}
       BASE_URL: ${BASE_URL}
       ALLOWED_ORIGINS: ${ALLOWED_ORIGINS}
       PORT: ${PORT}
@@ -29,6 +32,8 @@ services:
   pg:
     image: postgres:alpine
     restart: always
+    ports:
+      - 5432:5432
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_USER: ${POSTGRES_USER}
