--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,11 @@ POSTGRES_HOST=127.0.0.1
 POSTGRES_PORT=5432
 LOG_SQL=info
 
+MONGO_USERNAME=dnd
+MONGO_PASSWORD=password
+MONGO_HOST=127.0.0.1
+MONGO_PORT=27017
+
 JWT_SECRET=N07_S0_S3CR37
 
 SMTP_FROM=test@dnd.com
