--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,17 +1,27 @@
 version: "3.9"
 services:
   app:
-    context: ..
-    dockerfile: .devcontainer/Dockerfile
-    args:
-      NODE_VERSION: v18.12.1
-      GO_VERSION: 1.20.5
+    build:
+      context: ..
+      dockerfile: .devcontainer/Dockerfile
+      args:
+        NODE_VERSION: v18.12.1
+        GO_VERSION: 1.20.5
+
+    volumes:
+      - ..:/workspace:dnd-backend
+    command: sleep infinity
+    network_mode: service:pg
+
   pg:
     image: postgres:alpine
-    restart: always
-    ports:
-      - 5432:5432
+    restart: unless-stopped
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
     environment:
       POSTGRES_PASSWORD: password
       POSTGRES_USER: dnd
       POSTGRES_DB: dnd
+
+volumes:
+  postgres-data:
