--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,6 +20,5 @@
     }
   },
   "forwardPorts": [3001, 8080],
-  "postCreateCommand": "cd dnd-backend && go mod download cd ../dnd-frontend && yarn install",
-  "remoteUser": "vscode"
+  "postCreateCommand": "cd dnd-backend && go mod download cd ../dnd-frontend && yarn install"
 }
