--- a/.air.toml
+++ b/.air.toml
@@ -2,10 +2,10 @@
 root = "."
 tmp_dir = "tmp"
 [build]
-  cmd = "go build -o ./tmp/dnd.exe ."
+  cmd = "(swag init --output docs/swagger --md docs) && (go build -o ./tmp/dnd.exe .)"
   bin = "./tmp/dnd.exe"
   delay = 1000 # ms
-  exclude_dir = ["static", "tmp", "vendor"]
+  exclude_dir = ["static", "tmp", "vendor", "docs"]
   include_ext = ["go", "tpl", "tmpl", "html", "pug", "css", "js", "env"]
   exclude_regex = ["_test\\.go"]
   stop_on_error = true
